Dave Dev/src/objects/Cell__c.object
<CustomObject>
    <fields>
        <fullName>ColIndex__c</fullName>
        <label>ColIndex</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RowIndex__c</fullName>
        <label>RowIndex</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Worksheet__c</fullName>
        <label>Worksheet</label>
        <referenceTo>Worksheet__c</referenceTo>
        <relationshipLabel>Cells</relationshipLabel>
        <relationshipName>Cells</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Cell</label>
    <nameField>
        <label>Cell Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cells</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>